--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <div class="instagram continue">
             <div class="group">
-                <img src="/instagram-logo.png"  class= "instagram-logo" alt="instagram logo">
+                <img src="./instagram-logo.png"  class= "instagram-logo" alt="instagram logo">
                 <div class="profile-photo">
-                    <img src="/IMG_20211222_142905.png" alt="foto de perfil">
+                    <img src="./IMG_20211222_142905.png" alt="foto de perfil">
                 </div>
                 <a href="#" class="instagram-login">Continue como antoniomachado</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
